# audiopipe

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
src/: lib.rs  main.rs  node.rs  render.rs
src/audio_capture/: mod.rs
src/audio_capture/platform/: mod.rs
src/audio_capture/platform/windows/: LoopbackCapture.cpp  api.cpp  mod.rs
src/audio_capture/platform/windows/include/: LoopbackCapture.h
src/audio_capture/platform/windows/include/wil/: common.h
src/node/: input_device.rs  mod.rs  playback_device.rs  window.rs
src/platform/: mod.rs
src/platform/windows/: mod.rs
src/platform/windows/audio_capture/: api.cpp  mod.rs
src/platform/windows/audio_capture/include/: Common.h
src/platform/windows/audio_capture/include/wil/: resource.h  result_macros.h
src/platform/windows/get_processes/: mod.rs
