[package]
name = "audiopipe"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
iced = { version = "0.13.1", features = ["canvas", "tokio", "advanced"] }
iced_node_editor = { git = "https://github.com/freegamerskids/iced-node-editor.git", branch = "main", version = "0.1.0" }
ringbuf = "0.4.7"
tokio = { version = "1.40.0", features = ["sync"] }

[build-dependencies]
cc = "1.1.30"

[target.'cfg(target_os = "windows")'.dependencies]
cpal = { version = "0.15.3", features = ["asio"] }
windows = { version = "0.58.0", features = [
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Foundation", 
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }
